add some controller and yaml
